Add oboe, docs, license, cleanup
* Add the oboe
* Add some new documentation
* Cleanup